# PepeVault

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.zig  build.zig.zon  go.mod  index.html  main.go  tailwind.config.js
assets/: daisyui.js  output.css
auth/: auth.go
config/: config.go
db/: postgres.go
frontend/: build.mjs  package-lock.json  package.json
frontend/src/routes/: +layout.svelte  app.html
handlers/: user_handler.go  vault_handler.go
middlewares/: middlewares.go
models/: user.go  vault.go
routes/: router.go
src/: app.rs  lib.rs  main.rs  main.zig  routes.rs
src/components/: alert.rs  art.rs  navbar.rs
src/middlewares/: auth.rs
src/pages/: index.rs  login.rs  signup.rs
src/vault/: vault.rs
static/css/: Poppins.css  auth.css  generator.css  hero.css  vault.css
static/scripts/: Users.js
templates/: box.html  generator.html  index.html  login.html  modal.html  panel.html  register.html  sidebar.html  vault.html
