[package]
name = "pepevault"
version = "0.1.0"
edition = "2021"

#[lib]
#name = "pepevault"
#path = "src/lib.rs"

#[[bin]]
#name = "pepevault_app"
#path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sycamore = { version = "0.9.2", features = ["default", "serde", "suspense"] }
sycamore-router = "0.9.2"
